Adding data basee with SqL Server and working with crud operations

--- a/VedioGameApi/appsettings.json
+++ b/VedioGameApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-OG9785GN\\SQLEXPRESS;Database=VideoGameDb;Trusted_Connection=true;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
